# ChangeLog for sys-libs/readline
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/readline/ChangeLog,v 1.176 2012/01/06 21:34:19 halcy0n Exp $

  06 Jan 2012; Mark Loeser <halcy0n@gentoo.org> readline-6.2_p1.ebuild:
  Stable for ppc64; bug #384463

  23 Oct 2011; nixnut <nixnut@gentoo.org> readline-6.2_p1.ebuild:
  ppc stable #384463

  12 Oct 2011; Raúl Porcel <armin76@gentoo.org> readline-6.2_p1.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #384463

  09 Oct 2011; Jeroen Roovers <jer@gentoo.org> readline-6.2_p1.ebuild:
  Stable for HPPA (bug #384463).

  08 Oct 2011; Markus Meier <maekke@gentoo.org> readline-6.2_p1.ebuild:
  arm stable, bug #384463

  01 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> readline-6.2_p1.ebuild:
  x86 stable wrt bug #384463

  26 Sep 2011; Tony Vroon <chainsaw@gentoo.org> readline-6.2_p1.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo &
  Elijah "Armageddon" El Lazkani in bug #384463.

  26 Sep 2011; Mike Frysinger <vapier@gentoo.org> readline-6.1.ebuild,
  readline-6.1_p2.ebuild, readline-6.2.ebuild, readline-6.2_p1.ebuild:
  Drop unused autotools include #384463#1 by Agostino Sarubbo.

*readline-6.2_p1 (01 Mar 2011)

  01 Mar 2011; Mike Frysinger <vapier@gentoo.org> +readline-6.2_p1.ebuild:
  Version bump.

  01 Mar 2011; Brent Baude <ranger@gentoo.org> readline-6.1_p2.ebuild:
  stable ppc64, bug 354939

  26 Feb 2011; Raúl Porcel <armin76@gentoo.org> readline-6.1_p2.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #354939

  22 Feb 2011; nixnut <nixnut@gentoo.org> readline-6.1_p2.ebuild:
  ppc stable #354939

  21 Feb 2011; Jeroen Roovers <jer@gentoo.org> readline-6.1_p2.ebuild:
  Stable for HPPA (bug #354939).

  20 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  readline-6.1_p2.ebuild:
  x86 stable wrt bug #354939

  16 Feb 2011; Markos Chandras <hwoarang@gentoo.org> readline-6.1_p2.ebuild: