@@ -35,23 +35,24 @@ EBUILD readline-5.2_p14.ebuild 1905 RMD160 292c4388861f43c7cbbb7f5eda9bb3afc5ef9
 EBUILD readline-6.1.ebuild 2742 RMD160 09e56376947aacf4d88c3d278cbd8a77ba4a51d4 SHA1 f58c1417f2ec848f858018e2f185cfc82aaaf2af SHA256 e304fe6f2f16dee587d263f189bc61fa5ccad77a31ca66b7389d2656a9af39e1
 EBUILD readline-6.1_p2.ebuild 2804 RMD160 1ce8e46747ccdf397f07450c6980a04a997143cd SHA1 ad4e4fb266046082c331dbb924b04e45cb882aa3 SHA256 cfa02d256720648f8e8a2f2c83e783487b2e38ee2f05e7b8c962c99309815941
 EBUILD readline-6.2.ebuild 2945 RMD160 d75e99394e1e8187c936148fff12a696b8921382 SHA1 cb787a4497e6d334c1e40097ab2ba31028354972 SHA256 46153673d5b541aecc2cbf6c7f197cab389578386ca5ffab135e259d90ba97f2
+EBUILD readline-6.2_p1-r1.ebuild 2851 RMD160 44b5f293e6b2b6c7077c3f79753ce705e08d8e01 SHA1 9638ee5064ce049359e1653b29d6fef7a2d70da5 SHA256 c9a5732960c55d532c32c358e71ef6edd74b40914d59a5d6701d5489d7a24e95
 EBUILD readline-6.2_p1.ebuild 2937 RMD160 31cc8d97b15806a607b6c64cda4bfb2b2925ac5b SHA1 1436aef3f693449958fe9e8852c9fe9bb7993221 SHA256 606fc3e33dc24e1286dc756a549f0b64abd49a62a0771916170dc352bd159124
-MISC ChangeLog 22175 RMD160 4f511c38618025d4bbe63faf4a18c3b3bc50468e SHA1 b91261e3496e04b30826f670bd33648469638cf7 SHA256 fc2695a5f7857e666a65d8e994a63bf8b3f00effbae4273ee28971815a6dc8a6
+MISC ChangeLog 22347 RMD160 4d5946b3a2b03d9a52dfd3727e21ba1f370a89e8 SHA1 b8c75019e0e11ebcecc3b49ca70efa980e715b88 SHA256 9c11c3dd78a9941de5302ace351186bed3ab30ae391ca7b000550fff64555297
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQIcBAEBAgAGBQJPB2jjAAoJEPTTRK0uRVaNxAcQALGsbFNPx1ONDjQ7zYeZuGFB
-+cClACHwMTMZiTiu+jUKRU5GP1ulQHjt3tZhYcSIDFBPOOI7y/9KNW8Ws5b7g4jG
-hgLXLz69CcBPb95R/cnwgiPbPDFBFOz6cRVYDhePZLJ0emPnbiYFuN/tl+4pXLtc
-GFWLw/GWR5TdtZ08d+4+YsIlPHiVa3p3ePbYqxXPx/J4vIvkONoHfl6U2tVc6GQR
-MVrha5cctFC0GkapfzSbKMB2J4vCmRsKdVrmHWBk+meA+v6ieIXcz3yLwY0nKYp9
-/23AINbVHi4JC9H11/bv/GV94uOjNikJxDAYihXa7HPDCmCJh0xZ1VuyKtqVXu0M
-AhpRcn3Ejx5Lh7lkD1sYaxjIgeBjA3Ffsg5Qq4sxX7LV3+jaEmJFkvSLNRUFCJQ3
-iRj6e1KK/4kz8CfBW/aMi73sL6wuAtK8ViQWYBZC24DSZzU6JWmKXw3U9rDtH+jR
-npFOa8C3DAE77VGN2m8/1C7HiA1//sngo9Bw3xX4I6it3mAUD5HMXhnxzSyudSEA
-cRWz3K7NHyOUfdnOY8rCpJk/ZGBD0rIaPzjV2cJuMM5U/rP1oDrGqK4GGeJm8N9H
-yfG6IkbMaIwpusDcAgMlwqqbDDFwm9ITW8zILwjZpMNqSg7il2xqdU6Hy5JLtq0L
-vHlWDRz0hfycmdIWrphL
-=DMYl
+iQIcBAEBAgAGBQJPW55PAAoJELEHsLL7fEFWtk8P/RiIebYVHs45rEGoReudPFX3
+560b68bEmA9MaA+ti5Gmz5PGcfiFSs32YFNtcLcH9gunOKqK72WYtYKPWnbqmCqt
+qtpYAnRpcoPrys9ZJfBs5j3Tm7uknij6qtxPwoxp4eHDydX3+OaVGqIcVhtCD7rm
+TCTyiSQMrlGVsf42CE5PzlDzCH3xnxxb1Q3QP8n/FjzTKMg3yIUagIsjZ4oyBm0X
+5LTClzsD8kgfMLn20uRGuPQ8/i/cK/FoKYR/bOpihI1UsT9mypP892Pj2rqZStI+
+FCbWXeDYgbfYu7R0taM2ncwl8tM3cih8soiLRMcHNEgPTeotcDpmg+8ysE4odkkh
+aoHV3ILBC4O/fIXEZS9IzWKWJiP7A710gbynl2TBzNikzfmBjQNmpG5GoJIuK8/a
+3tKRY1igxhYcxoNz0bAQAgOzHMmB3swotKL9psn70hji98cJOrMZumYJNAlLWXHC
+5fcLei5ATePxyPo+1t4LamOKbi+dJ0v9HxD1xq93qyOoXr2X+aSYqrE0dEwpxr/Z
+gTGbdu84CuKKr5vvMkTeQYBhZZSY+uvhBzH8tR0/1pvPFsyWEYRku03Z5fKNx0Uu
+jAFQ0U4UmK7wh3XcWwUpyB/UtMcMo2l8QlqDm9PMDrERUuGQ5GlZTv7J75HrSnEJ
+AhF43uaJ5hnz67pt2lGN
+=X6k3
 -----END PGP SIGNATURE-----
